--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
+alpha-vantage==2.1.3
 certifi==2019.11.28
 chardet==3.0.4
+cycler==0.10.0
 idna==2.9
+kiwisolver==1.1.0
+matplotlib==3.2.0
+numpy==1.18.1
+pandas==1.0.1
+praw==6.5.1
+prawcore==1.0.1
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
 requests==2.23.0
 robin-stocks==0.9.9.6
+six==1.14.0
+update-checker==0.16
 urllib3==1.25.8
+websocket-client==0.57.0
