--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-alpha-vantage==2.1.3
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
@@ -9,6 +8,7 @@ numpy==1.18.1
 pandas==1.0.1
 praw==6.5.1
 prawcore==1.0.1
+progressbar==2.5
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
